1.1
  - Added geteuid(), seteuid(), getegid(), setegid()
  
1.0
  - Initial CRAN release
  